--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /*    HEADER   */
 
 .c-navbar-top {
-    background-color: #dc3545; /* Couleur de fond de la barre de navigation */
+    background-color: var(--red); /* Couleur de fond de la barre de navigation */
     color: #fff; /* Couleur du texte */
     padding: 10px 0; /* Espacement intérieur en haut et en bas */
 }
@@ -15,6 +15,32 @@
 }
 
 /*   BUTTONS   */
+
+.text {
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;   
+    padding-top: 20px;
+}
+
+.boutons {
+    display: flex;
+    justify-content: center;
+}
+
+input[type="text"] {
+    width: 25%;
+    padding:10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+input[type="text"]:focus {
+    outline: none;
+    border-color: var(--blue);
+    box-shadow: 0 0 5px var(--blue);
+}
 
 
 
